--- a/gbl/src/main/resources/application.properties
+++ b/gbl/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=gbl
 spring.datasource.url=jdbc:mysql://localhost:3306/bibliotheque?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Momodidi1
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
