--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bibliotheque
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/gbl
 spring.datasource.username=root
 spring.datasource.password=Momodidi1
 spring.jpa.hibernate.ddl-auto=update
